--- a/HallOfValhalla/HallOfValhalla.csproj
+++ b/HallOfValhalla/HallOfValhalla.csproj
@@ -8,6 +8,7 @@
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
     <UserSecretsId>12abd5f2-041b-4691-8314-e1ee71cb87d7</UserSecretsId>
+    <DockerComposeProjectPath>../docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
